results/SVCOMP/2-shot/log-boolean2-2024_03_18_23_51_47.txt
import java.util.Random;

public class boolean2 {
    //@ ensures \result == !b;
    public static boolean f(boolean b) {
        return !b;
    }

    //@ ensures \result == (f(b) == !b);
    public static boolean fun() {
        boolean b = new Random().nextBoolean();
        boolean result = f(b);
        return result == !b;
    }
}
/home/max/Documents/JMLGPT/tmp/boolean2.java:9: error: cannot find symbol
    //@ ensures \result == (f(b) == !b);
                              ^
  symbol:   variable b
  location: class boolean2
/home/max/Documents/JMLGPT/tmp/boolean2.java:9: error: cannot find symbol
    //@ ensures \result == (f(b) == !b);
                                     ^
  symbol:   variable b
  location: class boolean2
2 errors

